Visibility fix, layout fix, vite build fix

--- a/ui/apps/dropdown/src/index.css
+++ b/ui/apps/dropdown/src/index.css
@@ -10,6 +10,5 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   padding: 24px;
 }
